--- a/Style/main.css
+++ b/Style/main.css
@@ -1,5 +1,35 @@
+:root{
+    --vermelho:#E50914;
+    --preta:#000000;
+}
+
 *{
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+}
+
+body{ 
+    background-color: var(--preta);
+    font-family: 'Times New Roman', Times, serif;
+}
+
+header .container{
+
+}
+
+header .logo{
+    color: var(--vermelho);
+    font-family: 'Arial Black', Times;
+    font-size: 40px;
+}
+
+header nav a{
+    text-decoration: none;
+    color:#AAA;
+    margin-right: 10px;
+}
+
+header nav a:hover{
+    color:#fff;
 }
