--- a/Style/main.css
+++ b/Style/main.css
@@ -90,3 +90,12 @@ header nav a:hover{
 .botao i{
     margin-right: 8px;
 }
+
+.container {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.filme-principal .container{
+    width: 70%;
+}
