--- a/Style/main.css
+++ b/Style/main.css
@@ -12,7 +12,7 @@
 /* Elemento Base */
 body{ 
     background-color: var(--preta);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial', Times, serif;
     color:white;
 }
 
@@ -100,6 +100,7 @@ header nav a:hover{
 }
 
 .box-filmes{
+    margin-top: 5%;
     height: 100%;
     width: 100%;
     display: block;
